# bplus-tree

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.github/workflows/: ci.yml
benches/: bench_insert.rs  bench_metrics.rs
examples/: bytes_api.rs  example.rs  typed_api.rs
src/: api.rs  api_2.rs  codec.rs  database.rs  keyfmt.rs  layout.rs  lib.rs  metadata.rs  page.rs  storage.rs  tree.rs
src/api/: db.rs  raw.rs  transport.rs  typed.rs
src/api/transport/: embedded.rs  service.rs
src/bplustree/: epoch.rs  iter.rs  iterator.rs  mod.rs  node.rs  node_view.rs  transaction.rs  tree.rs
src/codec/: bincode.rs  kv.rs
src/database/: catalog.rs  manifest.rs  metadata.rs  superblock.rs
src/database/manifest/: reader.rs  writer.rs
src/keyfmt/: prefix.rs  raw.rs
src/page/: internal.rs  internal_page.rs  leaf.rs  leaf_page.rs
src/storage/: cache.rs  codec.rs  epoch.rs  file_page_storage.rs  file_store.rs  flatfile.rs  metadata.rs  metadata_manager.rs  mod.rs  page_store.rs  paged_node_storage.rs  trait.rs
src/storage/page/: internal_page.rs  leaf_page.rs  mod.rs
src/tests/: api_basic.rs  api_db.rs  codec_tests.rs  concurrent_stress.rs  epoch_tests.rs  mod.rs  range_iter.rs  tree_edge_cases.rs  tree_ops.rs  txn_commit.rs  txn_edge_cases.rs
src/tests/common/: mod.rs  test_epoch.rs  test_storage.rs
