[package]
name = "bplus_tree"
version = "0.1.0"
edition = "2024"
authors = ["Paris Mesidis <pmesidis@gmail.com>"]
rust-version = "1.85"
description = "Copy-on-write B+ tree with page-aligned storage, split/merge, and crash-safety primitives."
license = "MIT OR Apache-2.0"
repository = "https://github.com/pmes126/bplus-tree"
readme = "README.md"
keywords = ["bplus-tree", "b+tree", "datastructures", "storage", "database"]
categories = ["data-structures", "algorithms"]
homepage = "https://github.com/pmes126/bplus-tree"
documentation = "https://docs.rs/bplus_tree"

[features]
testing = ["dep:fail"]   # testing feature pulls in fail
default = []
failpoints = ["dep:fail"]
[dependencies]
fail = { version = "0.5", optional = true }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
bytemuck = { version = "1.14", features = ["derive"] }
zerocopy = { version = "0.7", features = ["derive"] }
thiserror = "1.0"
libc = "0.2"
crc32fast = "1.3"
smallvec = "1.15.1"
[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[dev-dependencies.bplus_tree]
path = "."
features = ["testing", "failpoints" ]

[dev-dependencies]
criterion = "0.5"
anyhow = "1.0"
rand = "0.8"
tempfile = "3.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[lib]
name = "bplus_tree"
path = "src/lib.rs"

[[bench]]
name = "bench_insert"
harness = false

[[bench]]
name = "bench_metrics"
harness = false

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
